<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.spring-middleware</groupId>
    <artifactId>spring-middleware-orchestrator</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>spring-middleware-orchestrator</name>
    <description>Orchestrator build using Spring Middleware</description>
    <url>https://github.com/Spring-Middleware/spring-middleware-orchestrator</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Fernando Guardiola Ruiz</name>
            <email>fernandoguardiolaruiz@gmail.com</email>
            <organization>Spring Middleware</organization>
            <organizationUrl>https://github.com/Spring-Middleware</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/Spring-Middleware/reference-service.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:Spring-Middleware/reference-service.git</developerConnection>
        <url>https://github.com/Spring-Middleware/reference-service</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <spring.boot.version>3.4.2</spring.boot.version>
        <spring-middleware.api.version>1.5.0</spring-middleware.api.version>
        <spring-middleware.app.version>1.8.0</spring-middleware.app.version>
        <spring-middleware.mongo-core.version>1.6.0</spring-middleware.mongo-core.version>
        <spring-middleware.kafka-core.version>1.5.0</spring-middleware.kafka-core.version>
        <spring-middleware.graphql.version>1.5.0</spring-middleware.graphql.version>
        <springdoc.openapi.version>2.8.4</springdoc.openapi.version>

        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <enable.preview.args>--enable-preview</enable.preview.args>

        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.2.5</maven.failsafe.plugin.version>

        <flatten.maven.plugin.version>1.6.0</flatten.maven.plugin.version>
        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.7.0</maven.javadoc.plugin.version>

        <orchestrator.core.version>1.0.0</orchestrator.core.version>
        <orchestrator.infra.version>1.0.0</orchestrator.infra.version>
        <orchestrator.demo.version>1.0.0</orchestrator.demo.version>

    </properties>

    <modules>
        <module>orchestrator-demo</module>
        <module>orchestrator-core</module>
        <module>orchestrator-infra</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>api</artifactId>
                <version>${spring-middleware.api.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>app</artifactId>
                <version>${spring-middleware.app.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>mongo-core</artifactId>
                <version>${spring-middleware.mongo-core.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.openapi.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>ochestrator-core</artifactId>
                <version>${orchestrator.core.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.spring-middleware</groupId>
                <artifactId>ochestrator-infra</artifactId>
                <version>${orchestrator.infra.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten.maven.plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>oss</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>

                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.release}</source>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                        <compilerArgs>
                            <arg>${enable.preview.args}</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine} ${enable.preview.args}</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine} ${enable.preview.args}</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.4.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.maven.plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <arg>${enable.preview.args}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>@{argLine} ${enable.preview.args}</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <argLine>@{argLine} ${enable.preview.args}</argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <failOnError>false</failOnError>
                                    <sourcepath>
                                        ${project.basedir}/src/main/java;${project.build.directory}/generated-sources/openapi/src/main/java
                                    </sourcepath>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
